[metadata]
name = recover_broken_vdb
version = 0.0.7
license_files = LICENSE

[options]
packages = recover_broken_vdb
python_requires = >= 3.8
scripts =
	bin/recover-broken-vdb-find-broken.sh
	bin/recover-broken-vdb-scanelf.sh

[options.entry_points]
console_scripts =
	recover-broken-vdb = recover_broken_vdb:start

